Удалить resume_parser

--- a/notebooks/TestParsers.ipynb
+++ b/notebooks/TestParsers.ipynb
@@ -10,8 +10,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T15:16:15.798293895Z",
-     "start_time": "2024-02-29T15:16:15.789344125Z"
+     "end_time": "2024-02-29T15:41:35.259876116Z",
+     "start_time": "2024-02-29T15:41:35.259191728Z"
     }
    },
    "id": "199382b52a6a12fe",
@@ -20,7 +20,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## resume_parser"
+    "## resume_parser (Отказались - медленный)"
    ],
    "metadata": {
     "collapsed": false
@@ -34,24 +34,20 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-29T15:16:17.906960125Z",
-     "start_time": "2024-02-29T15:16:16.645263938Z"
+     "end_time": "2024-02-29T15:41:37.727858196Z",
+     "start_time": "2024-02-29T15:41:37.581944944Z"
     }
    },
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[E050] Can't find model 'en_core_web_sm'. It doesn't seem to be a Python package or a valid path to a data directory.",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'resume_parser'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mOSError\u001B[0m                                   Traceback (most recent call last)",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
       "Cell \u001B[0;32mIn[2], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mresume_parser\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m resumeparse\n",
-      "File \u001B[0;32m~/PycharmProjects/ML_TalentMatch/resume_parser/__init__.py:1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mresume_parser\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mresumeparse\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m resumeparse\n\u001B[1;32m      3\u001B[0m __all__ \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mresumeparse\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m      5\u001B[0m ]\n",
-      "File \u001B[0;32m~/PycharmProjects/ML_TalentMatch/resume_parser/resumeparse.py:50\u001B[0m\n\u001B[1;32m     46\u001B[0m \u001B[38;5;66;03m# load pre-trained model\u001B[39;00m\n\u001B[1;32m     47\u001B[0m base_path \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mdirname(\u001B[38;5;18m__file__\u001B[39m)\n\u001B[0;32m---> 50\u001B[0m nlp \u001B[38;5;241m=\u001B[39m \u001B[43mspacy\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43men_core_web_sm\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     51\u001B[0m custom_nlp2 \u001B[38;5;241m=\u001B[39m spacy\u001B[38;5;241m.\u001B[39mload(os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mjoin(base_path,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdegree\u001B[39m\u001B[38;5;124m\"\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmodel\u001B[39m\u001B[38;5;124m\"\u001B[39m))\n\u001B[1;32m     52\u001B[0m custom_nlp3 \u001B[38;5;241m=\u001B[39m spacy\u001B[38;5;241m.\u001B[39mload(os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mjoin(base_path,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcompany_working\u001B[39m\u001B[38;5;124m\"\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmodel\u001B[39m\u001B[38;5;124m\"\u001B[39m))\n",
-      "File \u001B[0;32m~/PycharmProjects/ML_TalentMatch/venv/lib/python3.11/site-packages/spacy/__init__.py:51\u001B[0m, in \u001B[0;36mload\u001B[0;34m(name, vocab, disable, enable, exclude, config)\u001B[0m\n\u001B[1;32m     27\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mload\u001B[39m(\n\u001B[1;32m     28\u001B[0m     name: Union[\u001B[38;5;28mstr\u001B[39m, Path],\n\u001B[1;32m     29\u001B[0m     \u001B[38;5;241m*\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     34\u001B[0m     config: Union[Dict[\u001B[38;5;28mstr\u001B[39m, Any], Config] \u001B[38;5;241m=\u001B[39m util\u001B[38;5;241m.\u001B[39mSimpleFrozenDict(),\n\u001B[1;32m     35\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Language:\n\u001B[1;32m     36\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Load a spaCy model from an installed package or a local path.\u001B[39;00m\n\u001B[1;32m     37\u001B[0m \n\u001B[1;32m     38\u001B[0m \u001B[38;5;124;03m    name (str): Package name or model path.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     49\u001B[0m \u001B[38;5;124;03m    RETURNS (Language): The loaded nlp object.\u001B[39;00m\n\u001B[1;32m     50\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m---> 51\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mutil\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_model\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m     52\u001B[0m \u001B[43m        \u001B[49m\u001B[43mname\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     53\u001B[0m \u001B[43m        \u001B[49m\u001B[43mvocab\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mvocab\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     54\u001B[0m \u001B[43m        \u001B[49m\u001B[43mdisable\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdisable\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     55\u001B[0m \u001B[43m        \u001B[49m\u001B[43menable\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43menable\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     56\u001B[0m \u001B[43m        \u001B[49m\u001B[43mexclude\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mexclude\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     57\u001B[0m \u001B[43m        \u001B[49m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mconfig\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     58\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/PycharmProjects/ML_TalentMatch/venv/lib/python3.11/site-packages/spacy/util.py:472\u001B[0m, in \u001B[0;36mload_model\u001B[0;34m(name, vocab, disable, enable, exclude, config)\u001B[0m\n\u001B[1;32m    470\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m name \u001B[38;5;129;01min\u001B[39;00m OLD_MODEL_SHORTCUTS:\n\u001B[1;32m    471\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mIOError\u001B[39;00m(Errors\u001B[38;5;241m.\u001B[39mE941\u001B[38;5;241m.\u001B[39mformat(name\u001B[38;5;241m=\u001B[39mname, full\u001B[38;5;241m=\u001B[39mOLD_MODEL_SHORTCUTS[name]))  \u001B[38;5;66;03m# type: ignore[index]\u001B[39;00m\n\u001B[0;32m--> 472\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mIOError\u001B[39;00m(Errors\u001B[38;5;241m.\u001B[39mE050\u001B[38;5;241m.\u001B[39mformat(name\u001B[38;5;241m=\u001B[39mname))\n",
-      "\u001B[0;31mOSError\u001B[0m: [E050] Can't find model 'en_core_web_sm'. It doesn't seem to be a Python package or a valid path to a data directory."
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'resume_parser'"
      ]
     }
    ],
@@ -66,14 +62,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-29 13:53:08,729 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server-standard/2.6.0/tika-server-standard-2.6.0.jar to /tmp/tika-server.jar.\n",
-      "INFO:tika.tika:Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server-standard/2.6.0/tika-server-standard-2.6.0.jar to /tmp/tika-server.jar.\n",
-      "2024-02-29 13:53:29,742 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server-standard/2.6.0/tika-server-standard-2.6.0.jar.md5 to /tmp/tika-server.jar.md5.\n",
-      "INFO:tika.tika:Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server-standard/2.6.0/tika-server-standard-2.6.0.jar.md5 to /tmp/tika-server.jar.md5.\n",
-      "2024-02-29 13:53:30,782 [MainThread  ] [ERROR]  Unable to run java; is it installed?\n",
-      "ERROR:tika.tika:Unable to run java; is it installed?\n",
-      "2024-02-29 13:53:30,783 [MainThread  ] [ERROR]  Failed to receive startup confirmation from startServer.\n",
-      "ERROR:tika.tika:Failed to receive startup confirmation from startServer.\n",
+      "2024-02-29 18:28:02,484 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server-standard/2.6.0/tika-server-standard-2.6.0.jar to /tmp/tika-server.jar.\n",
+      "2024-02-29 18:28:33,579 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server-standard/2.6.0/tika-server-standard-2.6.0.jar.md5 to /tmp/tika-server.jar.md5.\n",
+      "2024-02-29 18:28:44,446 [MainThread  ] [ERROR]  Unable to run java; is it installed?\n",
+      "2024-02-29 18:28:44,448 [MainThread  ] [ERROR]  Failed to receive startup confirmation from startServer.\n",
       "ERROR:root:Error in tika installation:: Unable to start Tika server.\n",
       "ERROR:root:--------------------------\n",
       "ERROR:root:Install java for better result \n"
@@ -86,12 +78,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:53:31.931237111Z",
-     "start_time": "2024-02-29T10:53:08.728939922Z"
+     "end_time": "2024-02-29T15:28:45.696138656Z",
+     "start_time": "2024-02-29T15:28:02.480354973Z"
     }
    },
    "id": "3869dcba9dcdca46",
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -100,7 +92,7 @@
      "data": {
       "text/plain": "dict_keys(['email', 'phone', 'name', 'total_exp', 'university', 'designition', 'degree', 'skills', 'Companies worked at'])"
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,12 +103,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:53:59.576351712Z",
-     "start_time": "2024-02-29T10:53:59.554262220Z"
+     "end_time": "2024-02-29T15:28:45.709632099Z",
+     "start_time": "2024-02-29T15:28:45.699504825Z"
     }
    },
    "id": "f7d237c3cda5a176",
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -144,12 +136,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T11:06:58.964599959Z",
-     "start_time": "2024-02-29T11:06:58.923162445Z"
+     "end_time": "2024-02-29T15:28:45.749997539Z",
+     "start_time": "2024-02-29T15:28:45.703763804Z"
     }
    },
    "id": "e61211152cf9e7dc",
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -170,12 +162,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T11:34:54.367982133Z",
-     "start_time": "2024-02-29T11:34:54.316259623Z"
+     "end_time": "2024-02-29T15:41:41.978915313Z",
+     "start_time": "2024-02-29T15:41:40.793238258Z"
     }
    },
    "id": "4646cef61bd2ab7b",
-   "execution_count": 19
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -184,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/gregory1m/PycharmProjects/hr-tech-hack/venv/lib/python3.11/site-packages/spacy/util.py:275: UserWarning: [W031] Model 'en_training' (0.0.0) requires spaCy v2.1 and is incompatible with the current spaCy version (2.3.9). This may lead to unexpected results or runtime errors. To resolve this, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
+      "/home/gregory1m/PycharmProjects/ML_TalentMatch/venv/lib/python3.11/site-packages/spacy/util.py:275: UserWarning: [W031] Model 'en_training' (0.0.0) requires spaCy v2.1 and is incompatible with the current spaCy version (2.3.9). This may lead to unexpected results or runtime errors. To resolve this, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
       "  warnings.warn(warn_msg)\n"
      ]
     }
@@ -195,12 +187,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T11:36:15.638877404Z",
-     "start_time": "2024-02-29T11:36:14.391151771Z"
+     "end_time": "2024-02-29T15:41:43.985993122Z",
+     "start_time": "2024-02-29T15:41:42.518477824Z"
     }
    },
    "id": "eeeef57f4a476d60",
-   "execution_count": 24
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -209,7 +201,7 @@
      "data": {
       "text/plain": "dict_keys(['name', 'email', 'mobile_number', 'skills', 'college_name', 'degree', 'designation', 'experience', 'company_names', 'no_of_pages', 'total_experience'])"
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,12 +212,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T11:36:20.820670275Z",
-     "start_time": "2024-02-29T11:36:20.784013143Z"
+     "end_time": "2024-02-29T15:41:44.165851988Z",
+     "start_time": "2024-02-29T15:41:44.148052768Z"
     }
    },
    "id": "d91ebf518b12260d",
-   "execution_count": 25
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -237,7 +229,7 @@
       "Akhundov Damat\n",
       "akhundov1damat@gmail.com\n",
       "None\n",
-      "['System', 'English', 'Rest', 'Celery', 'Api', 'Opencv', 'Python', 'Programming', 'Docker', 'Architecture', 'Database', 'Linux', 'Django', 'C', 'Training']\n",
+      "['Opencv', 'Architecture', 'Django', 'Programming', 'Celery', 'English', 'Docker', 'Api', 'Python', 'Rest', 'System', 'C', 'Linux', 'Training', 'Database']\n",
       "None\n",
       "['B.S. IN INFORMATION TECHNOLOGIES\\nAND MANAGEMENT']\n",
       "['Online Gymnasium']\n",
@@ -255,21 +247,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T11:36:26.125161801Z",
-     "start_time": "2024-02-29T11:36:26.096833314Z"
+     "end_time": "2024-02-29T15:41:45.124469190Z",
+     "start_time": "2024-02-29T15:41:45.105221412Z"
     }
    },
    "id": "fde25d84ddf882d6",
-   "execution_count": 26
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3818292f229b621e"
+   "execution_count": 6
   }
  ],
  "metadata": {
